// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot loading 1`] = `
<div>
  <div
    class="UsersToRemove"
  >
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_guest"
                        name="system_guest"
                        type="checkbox"
                      />
                      Guest
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_user"
                        name="team_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_admin"
                        name="team_admin"
                        type="checkbox"
                      />
                      Team Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      />
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 2 of 2
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot with 2 users 1`] = `
<div>
  <div
    class="UsersToRemove"
  >
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_guest"
                        name="system_guest"
                        type="checkbox"
                      />
                      Guest
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_user"
                        name="team_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_admin"
                        name="team_admin"
                        type="checkbox"
                      />
                      Team Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 5;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 2;"
        >
          Role
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Groups
        </div>
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 5;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                  data-testid="profile-icon"
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/userid1/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
                data-testid="userGrid-name"
              >
                <span
                  data-testid="userGrid-displayName"
                >
                  user-1 -  
                </span>
                <span
                  class="ug-email"
                  data-testid="userGrid-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 2;"
          >
            <div
              class="UsersToRemoveRole"
            >
              Member
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 3;"
          >
            <div
              class="UsersToRemoveGroups"
            >
              0 Groups
            </div>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 5;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                  data-testid="profile-icon"
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/userid2/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
                data-testid="userGrid-name"
              >
                <span
                  data-testid="userGrid-displayName"
                >
                  user-2 -  
                </span>
                <span
                  class="ug-email"
                  data-testid="userGrid-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 2;"
          >
            <div
              class="UsersToRemoveRole"
            >
              Team Admin
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 3;"
          >
            <div
              class="UsersToRemoveGroups"
            >
              0 Groups
            </div>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 2 of 2
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/team_channel_settings/group/UsersToRemove should match snapshot with guests disabled 1`] = `
<div>
  <div
    class="UsersToRemove"
  >
    <div
      class="DataGrid"
      data-testid="dataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList"
              >
                <div
                  class="FilterList_name"
                >
                  Role
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_user"
                        name="team_user"
                        type="checkbox"
                      />
                      Member
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="team_admin"
                        name="team_admin"
                        type="checkbox"
                      />
                      Team Admin
                    </label>
                  </div>
                </div>
                <div
                  class="FilterList_item"
                >
                  <div
                    class="FilterList_checkbox"
                  >
                    <label>
                      <input
                        id="system_admin"
                        name="system_admin"
                        type="checkbox"
                      />
                      System Admin
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
        data-testid="dataGrid-header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 5;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 2;"
        >
          Role
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        >
          Groups
        </div>
      </div>
      <div
        class="DataGrid_rows"
        data-testid="dataGrid-rows"
      >
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 5;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                  data-testid="profile-icon"
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/userid1/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
                data-testid="userGrid-name"
              >
                <span
                  data-testid="userGrid-displayName"
                >
                  user-1 -  
                </span>
                <span
                  class="ug-email"
                  data-testid="userGrid-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 2;"
          >
            <div
              class="UsersToRemoveRole"
            >
              Member
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 3;"
          >
            <div
              class="UsersToRemoveGroups"
            >
              0 Groups
            </div>
          </div>
        </div>
        <div
          class="DataGrid_row"
          data-testid="dataGrid-row"
        >
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 5;"
          >
            <div
              class="UserGrid_nameRow"
            >
              <span
                class="status-wrapper style--none"
              >
                <span
                  class="profile-icon "
                  data-testid="profile-icon"
                >
                  <img
                    alt="user profile image"
                    class="Avatar Avatar-md"
                    loading="lazy"
                    src="/api/v4/users/userid2/image"
                  />
                </span>
              </span>
              <div
                class="UserGrid_name"
                data-testid="userGrid-name"
              >
                <span
                  data-testid="userGrid-displayName"
                >
                  user-2 -  
                </span>
                <span
                  class="ug-email"
                  data-testid="userGrid-email"
                />
              </div>
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 2;"
          >
            <div
              class="UsersToRemoveRole"
            >
              Team Admin
            </div>
          </div>
          <div
            class="DataGrid_cell"
            data-testid="dataGrid-cell"
            style="flex-grow: 3;"
          >
            <div
              class="UsersToRemoveGroups"
            >
              0 Groups
            </div>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_footer"
        data-testid="dataGrid-footer"
      >
        <div
          class="DataGrid_cell"
        >
          <span
            data-testid="dataGrid-footer-paginationInfo"
          >
            1 - 2 of 2
          </span>
          <button
            aria-label="Previous page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 ml-2 prev"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-label="Next page"
            class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 next"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
